@@ -36,6 +36,10 @@ Changes in version 0.1.2.2-alpha - 2006-??-??
       the v1 directory protocol, the v2 directory protocol, and as hidden
       service directories.  This should make it easier to migrate trust away
       from one of the two authorities currently running on Moria.
+    - Reserve the nickname "Unnamed" for routers that can't pick a hostname;
+      any router can call itself Unnamed; directory servers will never
+      allocate Unnamed to any particular router; clients won't believe that
+      any router is the canonical Unnamed.
 
   o Security Fixes, minor:
     - If a client asked for a server by name, and we didn't have a
